--- a/CSS/DataVisualisationSection.css
+++ b/CSS/DataVisualisationSection.css
@@ -46,31 +46,37 @@ article:nth-child(2)
 article:nth-child(1):hover
 {
     background-color: rgba(37,89,82);
+    color: white;
 }
 
 article:nth-child(2):hover
 {
     background-color: rgba(37,89,82);
+    color: white;
 }
 
 article:nth-child(3):hover
 {
     background-color: rgba(37,89,82);
+    color: white;
 }
 
 article:nth-child(4):hover
 {
     background-color: rgba(37,89,82);
+    color: white;
 }
 
 article:nth-child(5):hover
 {
     background-color: rgba(37,89,82);
+    color: white;
 }
 
 article:nth-child(6):hover
 {
     background-color: rgba(37,89,82);
+    color: white;
 }
 
 h1{
