--- a/CSS/DesignDoc.css
+++ b/CSS/DesignDoc.css
@@ -8,6 +8,10 @@ h1{
     background-color: rgba(155,202,180);
 } */
 
+.fa-paint-roller{
+    color: blue;
+}
+
 .styleGuideContainer{
     background-color: rgba(255,255,255,0.9);
     border-radius: 3%;
