--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,3 +10,7 @@ p{
 cite{
     background-color: rgba(52,120,160);
     }
+
+.fa-house-chimney{
+color: blue;
+}
